Added start of game in game.js
Added UI and event.js files too

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="css/style.css"/>
   </head>
   <body>
-    <script src="js/Caravan.js"></script>
-    <script src="js/Game.js"></script>
+    <script src="js/event.js"></script>
+    <script src="js/caravan.js"></script>
+    <script type="js/UI.js"></script>
+    <script src="js/game.js"></script>
   </body>
 </html>
