Added the remaining files

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
       <div class="updates-area" id="updates-area"></div>
       <div id="shop" class="hidden">
-        <div id="props">
+        <div id="prods">
         </div>
         <button>Leave shop</button>
       </div>
@@ -40,7 +40,7 @@
     <div id="event"></div>
     <script src="js/event.js"></script>
     <script src="js/caravan.js"></script>
-    <script type="js/UI.js"></script>
+    <script src="js/UI.js"></script>
     <script src="js/game.js"></script>
   </body>
 </html>
